--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user-app-control",
+  "name": "lead-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,19 +15,25 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "formik": "^2.4.0",
     "inversify": "^6.0.1",
     "next": "13.2.4",
     "next-superjson": "^0.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
     "superjson": "^1.12.2",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@fluffy-spoon/substitute": "^1.208.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
+    "@types/testing-library__jest-dom": "^5.14.6",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "autoprefixer": "^10.4.14",
@@ -38,6 +44,7 @@
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
@@ -47,6 +54,8 @@
     "prettier-plugin-tailwindcss": "^0.2.5",
     "prisma": "^4.11.0",
     "reflect-metadata": "^0.1.13",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1"
   }
 }
